Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,5 +52,5 @@ stages:
         deployToSlotOrASE: true
         resourceGroupName: 'docker-demo'
         slotName: 'production'
-        containers: '$(imageRepository)'
+        containers: '$(imageRepository):$(tag)'
         containerCommand: 'npm start'
