--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "test": "npm run lint",
-    "lint": "tslint src/**/*.ts"
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
